--- a/jingli-auth/src/main/resources/bootstrap.yml
+++ b/jingli-auth/src/main/resources/bootstrap.yml
@@ -16,12 +16,12 @@ spring:
       password: nacosnacos
       discovery:
         # 服务注册地址
-        server-addr: 127.0.0.1:8848
+        server-addr: jingli:8848
         namespace: 6b4d8a21-b62a-40b3-bd76-ee4c72b0a470
         group: DEFAULT_LWH
       config:
         # 配置中心地址
-        server-addr: 127.0.0.1:8848
+        server-addr: jingli:8848
         namespace: ${spring.cloud.nacos.discovery.namespace}
 #        group: ZFENOR_GROUP
         # 配置文件格式
